--- a/Calendar/appsettings.json
+++ b/Calendar/appsettings.json
@@ -11,7 +11,7 @@
     "DefaultConnection": "server=localhost;user=user;password=Password123;database=calendar"
   },
   "Jwt": {
-    "Key": "your_super_secret_key_12345",
+    "Key": "your_super_secret_key_12345dgfcvbn mcxgfvjbhndfxcgvbhj",
     "Issuer": "CalendarApp",
     "Audience": "CalendarUsers",
     "ExpireMinutes": 60
